--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,7 @@
     width: 40%;
     background-color: seagreen;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     justify-content: center;
 }
 
@@ -42,7 +41,8 @@ h1 {
 }
 
 h2 {
-    /* text-align: center; */
+    margin: 5px;
+    font-size: 30px;
 }
 
 button {
